--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
