--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "sass": "^1.69.5",
+    "styled-components": "^6.1.0",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
